Fix z-indexes between headers

--- a/src/assets/styles/cmps/BoardSettings.css
+++ b/src/assets/styles/cmps/BoardSettings.css
@@ -3,7 +3,7 @@
 
   position: absolute;
   right: 10px;
-  top: -5px;
+  top: 3px;
 
   width: 355px;
   padding: 0.5rem;
